# the-pragmatic-haskeller

./: .gitignore  README.md  the-pragmatic-haskeller.cabal
01-json/: MATERIAL.md  ingredient.json  pragmatic.cabal  recipe.json  simple-recipe.json
01-json/Pragmatic/: JSONParser.hs  Main.hs
01-json/src/: Main.hs
01-json/src/Pragmatic/JSON/: Parser.hs
02-snap/: MATERIAL.md  VERSION1.md  VERSION2.md  pragmatic.cabal  recipe.json
02-snap/Pragmatic/JSON/: Parser.hs
02-snap/Pragmatic/Server/: Application.hs  Main.hs  Site.hs
02-snap/src/: Main.hs
02-snap/src/Pragmatic/: Types.hs
03-config/: Pragmatic.cabal
03-config/Pragmatic/Server/: Site.hs
03-config/resources/: pragmatic.cfg
03-config/src/: Main.hs
03-config/src/Pragmatic/JSON/: Parser.hs
03-config/src/Pragmatic/Server/: Site.hs
04-bigoven/: pragmatic.cabal
04-bigoven/src/Pragmatic/Server/: Site.hs
04-recipe-puppy/: MATERIAL.md  devel.cfg  pragmatic.cabal
04-recipe-puppy/src/Pragmatic/: Types.hs
04-recipe-puppy/src/Pragmatic/Server/: Site.hs
05-dsl/: ciambellone.rcp  pragmatic.cabal
05-dsl/src/Pragmatic/DSL/: Example.hs  Parser.hs
06-lens/: huggen.html  pragmatic.cabal
06-lens/src/Pragmatic/DSL/: Example.hs
06-lens/src/Pragmatic/Server/: Site.hs
07-forms/: pragmatic.cabal
07-forms/snaplets/heist/templates/: index.tpl  new_recipe.tpl
07-forms/src/Pragmatic/DSL/: Example.hs  Parser.hs  Routes.hs
07-forms/src/Pragmatic/Server/: Application.hs  Site.hs
07-forms/static/js/codemirror/mode/: recipe.js
08-heist/: ciambellone.rcp  pragmatic.cabal  site_key.txt
08-heist/snaplets/heist/templates/: base.tpl  index.tpl  new_dsl.tpl  new_recipe.tpl
08-heist/src/Pragmatic/: Types.hs
08-heist/src/Pragmatic/DSL/: Example.hs  Routes.hs
08-heist/src/Pragmatic/Server/: Site.hs
08-heist/static/: screen.css
09-realtime/: pragmatic.cabal
09-realtime/snaplets/fay/: devel.cfg
09-realtime/snaplets/fay/js/: FayExample.js
09-realtime/snaplets/fay/src/: FayExample.hs
09-realtime/snaplets/heist/templates/: base.tpl  hello_fay.tpl  new_recipe.tpl
09-realtime/src/Pragmatic/DSL/: Routes.hs
09-realtime/src/Pragmatic/JSON/: Parser.hs
09-realtime/src/Pragmatic/Server/: Application.hs  Forms.hs  RecipePuppy.hs  Site.hs
09-realtime/static/css/: flot.css
foo/: foo.cabal
