Name:                pragmatic
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable pragmatic
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson                     >= 0.6.0.1 && < 0.7,
    base                      >= 4       && < 5,
    bytestring                >= 0.9.1   && < 0.11,
    text                      >= 0.11    && < 0.12
