Name:                pragmatic
Version:             0.2
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable pragmatic
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson                     >= 0.6.0.1 && < 0.7,
    aeson-bson                >= 0.2.0   && < 0.3,
    mongoDB                   >= 1.3.2   && < 1.4,
    base                      >= 4       && < 5,
    bytestring                >= 0.9.1   && < 0.11,
    text                      >= 0.11    && < 0.12,
    snap                      >= 0.11    && < 0.12,
    lens                      >= 3.7     && < 4.0,
    snaplet-mongodb-minimalistic >= 0.0.6.8
