Name:                pragmatic
Version:             0.5
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable pragmatic
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    aeson                     >= 0.6.0.1 && < 0.7,
    aeson-bson                >= 0.2.0   && < 0.3,
    mongoDB                   >= 1.3.2   && < 1.4,
    configurator              >= 0.2.0.2 && < 0.3,
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.11    && < 0.12,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.11    && < 0.12,
    snap-core                 >= 0.9     && < 0.10,
    snap-server               >= 0.9     && < 0.10,
    snap-loader-static        >= 0.9     && < 0.10,
    parsec                    >= 3.1.3   && < 4.0,
    text                      >= 0.11    && < 0.12,
    time                      >= 1.1     && < 1.5,
    snaplet-mongodb-minimalistic >= 0.0.6.7 && < 0.0.8,
    HTTP                      >= 4000.2.8   && < 4000.3,
    xmlhtml                   >= 0.1

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 3.9

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
