Name:                pragmatic
Version:             0.9
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable pragmatic
  hs-source-dirs: src, snaplets/fay/src
  main-is: Main.hs

  Build-depends:
    HTTP                      >= 4000.2.8   && < 4000.3,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    aeson                     >= 0.6.0.1 && < 0.7,
    aeson-pretty              >= 0.7     && < 0.8,
    aeson-bson                >= 0.2.0   && < 0.3,
    base                      >= 4       && < 5,
    blaze-html                >= 0.5.1.3 && < 0.7,
    bytestring                >= 0.9.1   && < 0.11,
    configurator              >= 0.2.0.2 && < 0.3,
    digestive-functors        >= 0.6.0.1 && < 0.7,
    digestive-functors-heist  >= 0.6.0.1 && < 0.7,
    heist                     >= 0.11.0.1  && < 0.12,
    lens                      >= 3.7     && < 4.0,
    mtl                       >= 2       && < 3,
    mongoDB                   >= 1.3.2   && < 1.4,
    parsec                    >= 3.1.3   && < 4.0,
    snap                      >= 0.11.2    && < 0.12,
    snap-core                 >= 0.9.3.1   && < 0.10,
    snap-server               >= 0.9.3.1   && < 0.10,
    snap-loader-static        >= 0.9.0.1   && < 0.10,
    fay                       >= 0.14,
    fay-jquery                >= 0.3,
    snaplet-fay               >= 0.3.1.1,
    snaplet-mongodb-minimalistic == 0.0.6.8,
    text                      >= 0.11    && < 0.12,
    random                    >= 1.0.1.1,
    time                      >= 1.1     && < 1.5,
    xmlhtml                   >= 0.1   && < 0.3

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 3.9

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
